# jobhunter

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .venv  CLAUDE.md  DESIGN.md  PLAN-generic-form-agent.md  README.md  STATUS.md  bandit.toml  data  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: dep-scan.yml  sast.yml  sbom.yml  secrets-scan.yml  threat-model-check.yml
config/: search_queries.yaml  settings.yaml
profile/: user_profile.yaml  user_profile.yaml.orig
src/jobhunter/: __init__.py  main.py  scheduler.py
src/jobhunter/agents/: apply_agent.py  base.py  email_agent.py  referral_agent.py  search_agent.py
src/jobhunter/applicators/: __init__.py  base.py  form_filling.py  (+3 more)
templates/: cover_letter.html  cover_letter_base.md  resume.html  resume_base.md
tests/test_apply/: test_generic_applicator.py  test_linkedin_easy.py  test_question_answering.py  test_workday.py  test_workday_planner.py
tests/test_browser/: test_accessibility.py  test_base_agent.py  test_context.py  test_stealth.py
tests/test_crypto/: test_vault.py
tests/test_db/: test_engine.py  test_profile_loader.py  test_repository.py
tests/test_email/: __init__.py  test_classifier.py  test_email_agent.py  test_gmail_auth.py  test_gmail_client.py
tests/test_scheduler/: test_cli.py  test_referral_security.py  test_scheduler.py
tests/test_search/: test_domain_blacklist.py  test_job_parsing.py  test_llm_client.py  test_rate_limiter.py  test_url_builder.py
threat-models/: README.md  codex-description.md  codex.json
(+23 files in other folders)
